--- a/dags/config_api.json
+++ b/dags/config_api.json
@@ -1,4 +1,4 @@
 {
-	"x-rapidapi-key": "***",
+	"x-rapidapi-key": "75942685c4msh154d801d9399610p1732e9jsne785c587b6c7",
 	"x-rapidapi-host": "real-time-events-search.p.rapidapi.com"
 }
